[package]
name = "price-quoter-api"
version = "0.1.0"
edition = "2021"

[dependencies]
price-quoter = { path = "../price-quoter", features = ["api"] }
axum = "0.7"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing-subscriber = "0.3"
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
